--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,5 +96,5 @@ jobs:
       with:
         name: aseprite
         path: |
-          /Users/jiangxuhan/Documents/code
-          /Users/jiangxuhan/Documents/code/aseprite.exe
+          D:/a/aseprite/aseprite/build/bin/data
+          D:/a/aseprite/aseprite/build/bin/aseprite.exe
