--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,3 +92,8 @@ jobs:
       shell: bash
       run: |
         cd build && ninja
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: aseprite
+        path: /Users/jiangxuhan/Documents/code/aseprite.exe
