--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,18 @@ jobs:
           wget https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-Windows-Release-x64.zip
           unzip Skia-Windows-Release-x64.zip -d skia
         elif [[ "${{ runner.os }}" == "macOS" ]] ; then
-          wget https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-macOS-Release-arm64.zip
-          unzip Skia-macOS-Release-arm64.zip -d skia
+          # 动态检测架构
+          ARCH=$(uname -m)
+          if [[ "$ARCH" == "arm64" ]]; then
+            SKIA_URL="https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-macOS-Release-arm64.zip"
+            SKIA_DIR="Release-arm64"
+          else
+            SKIA_URL="https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-macOS-Release-x64.zip"
+            SKIA_DIR="Release-x64"
+          fi
+          wget $SKIA_URL
+          unzip Skia-macOS-*.zip -d skia
+          ls -l skia/out/$SKIA_DIR/  # 验证路径
         else
           wget https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-Linux-Release-x64-libstdc++.zip
           unzip Skia-Linux-Release-x64-libstdc++.zip -d skia
@@ -94,20 +104,32 @@ jobs:
         cd build && ninja
     # 新增步骤：复制Skia库到构建目录
     - name: Copy Skia Libraries
-      if: ${{ matrix.ui == 'gui' }}
+      if: ${{ matrix.ui == 'gui' && runner.os == 'macOS' }}
       shell: bash
       run: |
-        case "${{ runner.os }}" in
-          macOS)
-            cp skia/out/Release-arm64/*.dylib build/bin/
-            ;;
-          Linux)
-            cp skia/out/Release-x64/*.so build/bin/
-            ;;
-          Windows)
-            cp skia/out/Release-x64/*.dll build/bin/
-            ;;
-        esac
+        ARCH=$(uname -m)
+        if [[ "$ARCH" == "arm64" ]]; then
+          SKIA_DIR="Release-arm64"
+        else
+          SKIA_DIR="Release-x64"
+        fi
+        echo "=== Copying Skia Libraries from $SKIA_DIR ==="
+        mkdir -p build/bin
+        cp -v skia/out/$SKIA_DIR/*.dylib build/bin/
+        ls -l build/bin/*.dylib
+    - name: Fix RPATH (macOS)
+      if: ${{ runner.os == 'macOS' }}
+      run: |
+        ASEPRITE_PATH="build/bin/aseprite"
+        if [ ! -f "$ASEPRITE_PATH" ]; then
+          ASEPRITE_PATH="build/aseprite.app/Contents/MacOS/aseprite"
+        fi
+        if [ -f "$ASEPRITE_PATH" ]; then
+          install_name_tool -add_rpath @executable_path $ASEPRITE_PATH
+        else
+          echo "Error: aseprite executable not found!"
+          exit 1
+        fi
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
