--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,24 +25,24 @@ jobs:
     - name: Install Dependencies
       if: runner.os == 'macOS'
       run: |
-        # 创建隔离的 Homebrew 环境
+        # 创建隔离环境
         export HOMEBREW_PREFIX="$(pwd)/.brew"
         export PATH="$HOMEBREW_PREFIX/bin:$PATH"
         git clone --depth=1 https://github.com/Homebrew/brew $HOMEBREW_PREFIX
   
-        # 配置环境变量（禁止自动行为）
-        echo "HOMEBREW_NO_AUTO_UPDATE=1" >> $GITHUB_ENV
-        echo "HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1" >> $GITHUB_ENV
+        # 配置核心仓库
+        brew tap --force homebrew/core
+        brew update
   
-        # 安装核心依赖（精确控制）
+        # 安装精准依赖
         brew install \
           --force-bottle \
-          --ignore-dependencies \
+          --formula \
           python git ninja pkg-config \
-          libwebp libjpeg-turbo harfbuzz freetype
+          webp libjpeg harfbuzz freetype
   
-        # 验证依赖完整性
-        ls -l $HOMEBREW_PREFIX/opt/libwebp/lib/libwebp.dylib
+        # 验证安装
+        ls -l $HOMEBREW_PREFIX/opt/webp/lib/libwebp.dylib
         ls -l $HOMEBREW_PREFIX/opt/harfbuzz/lib/libharfbuzz.dylib
         
     - name: Build Skia
